--- a/music-player/src/Player.css
+++ b/music-player/src/Player.css
@@ -1,9 +1,9 @@
 .player {
     position: fixed;
-    z-index: 2;
+    z-index: 1;
     bottom: 0px;
     width: 100vw;
-    height: 14%;
+    height: 90px;
     background-color:white;
     box-shadow: 0px 0px 2px #888888;
     border-top-left-radius: 12px;
