--- a/music-player/src/Topbar.css
+++ b/music-player/src/Topbar.css
@@ -1,9 +1,9 @@
 .topbar {
     position: fixed;
-    z-index: 3;
+    z-index: 1;
     top: 0px;
     width: 100vw;
-    height: 11%;
+    height: 70px;
     background-color:white;
     box-shadow: 0px 0px 2px #888888;
     display: flex;
@@ -12,9 +12,9 @@
 
 .app-logo  {
     object-fit: contain;
-    width: 45px;
-    margin-left: 5%;
-    padding: 1%;
+    width: 50px;
+    margin-left: 40px;
+    padding-right: 15px;
     transform: rotate(10deg);
 }
 
@@ -26,7 +26,7 @@
 
 .profile {
     object-fit: contain;
-    width: 40px;
+    width: 50px;
     position: absolute;
     right: 2%;
     background-color: grey;
